aicode/mslang/tests/errors/property_on_non_instance.ms
// Test: property access on non-instance
var x = 42;
x.field; // expect runtime error: Only instances have properties.
